Configurable ssh user and custom command

--- a/config/ecs_rails_console.yml
+++ b/config/ecs_rails_console.yml
@@ -8,6 +8,7 @@ defaults: &defaults
   security_groups:
     - internal-security-group
     - console-public-security-group
+  ssh_user: root
 
 production:
   <<: *defaults
